Add the endpoint for creating tags
