# internal/api/articles_router.go
@@ -1,0 +1,11 @@
+package api
+
+import "net/http"
+
+func ArticlesRouter() *http.ServeMux {
+	mux := http.NewServeMux()
+
+	mux.HandleFunc("POST /", ApiConfig.CreateArticle)
+
+	return mux
+}
