# internal/api/tags_router.go
@@ -1,0 +1,11 @@
+package api
+
+import "net/http"
+
+func TagsRouter() *http.ServeMux {
+	mux := http.NewServeMux()
+
+	mux.HandleFunc("POST /", ApiConfig.CreateTags)
+
+	return mux
+}
